--- a/m/me/meg/megamoneymailz.com.html
+++ b/m/me/meg/megamoneymailz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2013-05-02.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130502065120id_/http%3A//megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228015945id_/http%3A//megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -70,7 +70,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 </style>
 <center>
-           <a href="http://megamoneymailz.com/bannerclick.php?id=6215" target="_blank"><img src="http://ultimate-safelist.com/images/468_60.gif" border="0"></a><br>
+           <a href="http://megamoneymailz.com/bannerclick.php?id=6547" target="_blank"><img src="http://paradise-traffic.com/getimg.php?id=2" border="0"></a><br>
 	</center><p align="center">
 
 
@@ -191,6 +191,9 @@ privacy policies may differ from ours. </font></p><br>
 
 <map name="Map" id="Map"><area shape="rect" coords="761,138,901,318" href="http://www.cheapminisite.com" target="_blank" alt="Graphics By: CheapMinisite.com">
 </map>
+<script language="JavaScript">var cookie="y9KEzLHv"; var popup; var height="+screen.height+"; var width="+screen.width+"; var left=0; var top=0; entrypop('http://viral-trafficbar.com/link/promo'); function entrypop(filename){ if (getcookie(cookie)==""){ popup = window.open(filename, "","height="+height+",width="+width+",top="+top+",left="+left+",location=yes,menubar=yes,resizable=yes,scrollbars=yes,status=yes,titlebar=yes,toolbar=yes,directories=yes"); self.focus(); setcookie(); } } function getcookie(cookieName) { var id = cookieName + "="; var cookievalue = ""; if (document.cookie.length > 0) { offset = document.cookie.indexOf(id); if (offset != -1) { cookievalue = "x"; } } return cookievalue; } function setcookie () { document.cookie = cookie + "=" + escape ("done"); } </script>
+<script type="text/javascript" src="http://forms.aweber.com/form/13/652639613.js"></script>
+
 
 
 
