--- a/s/so/sou/soundspectrum.com.html
+++ b/s/so/sou/soundspectrum.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the soundspectrum.com privacy policy that was archived on 2013-01-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130124155407id_/http%3A//www.soundspectrum.com/legal/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the soundspectrum.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228030928id_/http%3A//www.soundspectrum.com/legal/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>SoundSpectrum -- Privacy Policy</title>
@@ -20,10 +20,10 @@ urchinTracker();
 <body class="ssbody">
 <table class="ssnavbarbg" width="800" cellspacing="0" cellpadding="0" align="center">
     <tbody><tr>
-        <td height="74" colspan="16"><a href="../"><img src="http://media.soundspectrum.com/images/ss_logo.gif" width="800" height="74" border="0" alt="SoundSpectrum music visualization software"></a></td>
+        <td height="74" colspan="15"><a href="../"><img src="../images/ss_logo.gif" width="800" height="74" border="0" alt="SoundSpectrum music visualization software"></a></td>
     </tr>
     <tr>
-        <td height="1" colspan="16" bgcolor="#666666"></td>
+        <td height="1" colspan="15" bgcolor="#666666"></td>
     </tr>
     <tr>
         <td align="right" width="14"></td>
@@ -32,10 +32,9 @@ urchinTracker();
         <td align="left" width="52"><a class="class2" href="../g-force/">G-Force</a></td>
         <td align="left" width="61"><a class="class2" href="../softskies/">SoftSkies</a></td>
         <td align="left" width="62"><a class="class2" href="../whitecap/">WhiteCap</a></td>
-		<td align="left" width="32"><a class="class2" href="../products/jazzdvd.html">DVD</a></td>
 		<td align="left" width="20"><a class="class2" href="../winterwonders/">WW</a></td>
 
-        <td width="126"></td>
+        <td width="158"></td>
 
         <td align="right" width="42"><div align="right"><a class="class2" href="../">Home</a></div></td>
         <td align="right" width="42"><a class="class2" href="../news.html">News</a></td>
@@ -46,7 +45,7 @@ urchinTracker();
         <td align="right" width="56">
 			<table cellspacing="0" cellpadding="0">
 				<tbody><tr>
-					<td valign="middle"><a class="class2" href="../payment/cart.html"><img src="http://media.soundspectrum.com/images/cart.gif" border="0" width="18" height="13" alt=""></a></td>
+					<td valign="middle"><a class="class2" href="../payment/cart.html"><img src="../images/cart.gif" border="0" width="18" height="13" alt=""></a></td>
 					<td valign="middle"><a class="class2" href="../payment/cart.html">&nbsp;Cart</a></td>
 				</tr>
 			</tbody></table>
@@ -55,7 +54,7 @@ urchinTracker();
         <td align="right" width="14"></td>
     </tr>
     <tr>
-        <td height="1" colspan="16" bgcolor="#666666"></td>
+        <td height="1" colspan="15" bgcolor="#666666"></td>
     </tr>
 </tbody></table>
 <table width="800" cellspacing="0" cellpadding="0" align="center">
