--- a/j/jv/jvl/jvlistpro.com.html
+++ b/j/jv/jvl/jvlistpro.com.html
@@ -1,18 +1,18 @@
-<!--The following is the downloaded HTML source of the jvlistpro.com privacy policy that was archived on 2013-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130627000232id_/http%3A//www.aweber.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the jvlistpro.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228033656id_/http%3A//www.aweber.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>Privacy Policy - Your Information Is Kept Safe</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script async="" src="https://d2xgf76oeu9pbh.cloudfront.net/9cd68a83fe26d41839e75e5cd5975e61.js" type="text/javascript"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
+<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1"><script type="text/javascript" async="" src="//doug1izaerwt3.cloudfront.net/7380cf13bcddad3f1993fd5b0f313c4c7c679d73.1.js"></script><script type="text/javascript" async="" src="//i.kissmetrics.com/i.js"></script><script async="" src="//www.googletagmanager.com/gtm.js?id=GTM-5J4XPK"></script><script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 <script type="text/javascript" charset="utf-8">
     if (typeof AW == 'undefined') AW = {};
     if (typeof AW.Pages == 'undefined') AW.Pages = {}
 </script>
 
 <!-- Javascript Libraries -->
-<script type="text/javascript" src="http://cdn1.aweber-static.com/js/vendors/jquery/public_group.11944.js"></script>
-<script type="text/javascript" src="http://cdn1.aweber-static.com/js/public_misc_group.11944.js"></script>
-<script type="text/javascript" src="http://cdn1.aweber-static.com/js/AW/public_features_group.11944.js"></script>
+<script type="text/javascript" src="https://awas.aweber-static.com/js/public_group.119857.js"></script>
+<script type="text/javascript" src="https://awas.aweber-static.com/js/public_misc_group.119857.js"></script>
+<script type="text/javascript" src="https://awas.aweber-static.com/js/AW/public_features_group.119857.js"></script>
 
 <script type="text/javascript">
     if (parent.frames.length > 0) top.location.replace(document.location);
@@ -30,10 +30,10 @@
 
 <!-- CSS Files -->
 <!--[if gte IE 8]>
-<link rel="stylesheet" type="text/css" href="http://cdn2.aweber-static.com/css/ie8.11944.css" />
+<link rel="stylesheet" type="text/css" href="https://awas.aweber-static.com/css/ie8.119857.css" />
 <![endif]-->
-<link rel="stylesheet" type="text/css" href="http://cdn2.aweber-static.com/css/main.11944.css">
-<link rel="stylesheet" type="text/css" href="http://cdn2.aweber-static.com/css/jquery.fancybox.11944.css">
+<link rel="stylesheet" type="text/css" href="https://awas.aweber-static.com/css/main.119857.css">
+<link rel="stylesheet" type="text/css" href="https://awas.aweber-static.com/css/jquery.fancybox.119857.css">
 
 
 <!-- CSS Files -->
@@ -45,7 +45,7 @@ var _vis_opt_protocol = (('https:' == document.location.protocol) ? 'https://' :
 document.write('<s' + 'cript src="' + _vis_opt_protocol +
 'dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&a='+_vis_opt_account_id+'&url='
 +encodeURIComponent(document.URL)+'&random='+Math.random()+'" type="text/javascript">' + '<\/s' + 'cript>');
-</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=1330&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20130627000232id_%2Fhttp%253A%2F%2Fwww.aweber.com%2Fprivacy.htm&amp;random=0.5170412076666269" type="text/javascript"></script>
+</script><script src="https://dev.visualwebsiteoptimizer.com/deploy/js_visitor_settings.php?v=1&amp;a=1330&amp;url=https%3A%2F%2Fweb.archive.org%2Fweb%2F20131228033656id_%2Fhttp%253A%2F%2Fwww.aweber.com%2Fprivacy.htm&amp;random=0.6735341636992715" type="text/javascript"></script>
 
 <script type="text/javascript">
 if(typeof(_vis_opt_settings_loaded) == "boolean") { document.write('<s' + 'cript src="' + _vis_opt_protocol +
@@ -58,18 +58,7 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
         _vis_opt_top_initialize(); vwo_$(document).ready(function() { _vis_opt_bottom_initialize(); });
 }
 </script>
-<!-- End Visual Website Optimizer Code --><!-- PadiAct Code  -->
-<script type="text/javascript">
-<!--
-(function() {
-  var pa = document.createElement('script'), ae = document.getElementsByTagName('script')[0]
-  , protocol = (('https:' == document.location.protocol) ? 'https://' : 'http://');pa.async = true;
-  pa.src = protocol + 'd2xgf76oeu9pbh.cloudfront.net/9cd68a83fe26d41839e75e5cd5975e61.js'; pa.type = 'text/javascript'; ae.parentNode.insertBefore(pa, ae);
-})();
--->
-</script>
-
-<!-- Google Analytics Code -->
+<!-- End Visual Website Optimizer Code --><!-- Google Analytics Code -->
 <script type="text/javascript">
     <!--
     var _gaq = _gaq || [];
@@ -114,10 +103,45 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
     })();
     -->
 </script>
+<script type="text/javascript">
+    var _kmq = _kmq || [];
+    var _kmk = _kmk || '7380cf13bcddad3f1993fd5b0f313c4c7c679d73';
+
+    function _kms(u) {
+        setTimeout(function() {
+            var d = document,
+                f = d.getElementsByTagName('script')[0],
+                s = d.createElement('script');
+            s.type = 'text/javascript';
+            s.async = true;
+            s.src = u;
+            f.parentNode.insertBefore(s, f);
+        }, 1);
+    }
+    _kms('//i.kissmetrics.com/i.js');
+    _kms('//doug1izaerwt3.cloudfront.net/' + _kmk + '.1.js');
+    </script>
 <script async="true" type="text/javascript" src="https://s.adroll.com/j/roundtrip.js"></script></head>
 
 
 <body>
+
+<!-- Custom Dimensions for Google Tag Manager -->
+<script type="text/javascript">
+dataLayer = [{
+}];
+</script>
+<!-- End Custom Dimensions -->
+
+<!-- Google Tag Manager -->
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-5J4XPK"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-5J4XPK');</script>
+<!-- End Google Tag Manager -->
 
    <!-- Header -->
    <div id="header">
@@ -130,7 +154,7 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
       <!-- Logo -->
       <!-- Remove inline style when switching back to regular logo-->
       <div id="logo">
-                  <a href="http://www.aweber.com" style="background:url(http://cdn4.aweber-static.com/images/logo.gif) no-repeat;"> <img id="logo-image" src="http://cdn4.aweber-static.com/images/logo.gif" width="257" height="71" alt="logo"> AWeber Email Marketing Software</a>
+                  <a href="http://www.aweber.com" style="background:url(https://awas.aweber-static.com/images/holiday_logo.gif) no-repeat;"> <img id="logo-image" src="https://awas.aweber-static.com/images/holiday_logo.gif" width="257" height="71" alt="logo"> AWeber Email Marketing Software</a>
       </div>
 
       <!-- Menu -->
@@ -157,6 +181,14 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
             <li><a href="https://www.aweber.com/signup.htm">Affiliate Sign Up</a></li>
          </ul>
       </li>
+      
+      <li class="off"><a href="http://www.aweber.com/about.htm">About&nbsp;&nbsp;</a>
+         <ul>
+            <li><a href="http://www.aweber.com/meet-the-team.htm">Meet The Team</a></li>
+            <li><a href="http://www.aweber.com/press.htm">Press</a></li>
+            <li><a href="http://www.aweber.jobs">Work At AWeber</a></li>
+         </ul>
+      </li>
 
       <li class="off"><a href="https://www.aweber.com/contact-us.htm">Support&nbsp;&nbsp;</a>
          <ul>
@@ -164,7 +196,6 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
             <li><a href="https://help.aweber.com/forums">Knowledge Base</a></li>
             <li><a href="http://www.aweber.com/videos.htm">Videos</a></li>
             <li><a href="http://www.aweber.com/webinars.htm">Webinars</a></li>
-            <li><a href="http://www.aweber.com/press.htm">Press</a></li>
          </ul>
       </li>
 
@@ -266,8 +297,8 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
         <p>We use this information, which does not identify individual users, to analyze trends, to administer the site, to track users' movements around the site and to gather demographic information about our user base as a  whole.</p>
         <br>
 
-        <h3>Advertising</h3>
-        <p>We partner with a third party ad network to either display advertising on our Web site or to manage our advertising on other sites.  Our ad network partner uses cookies and Web beacons to collect non-personally identifiable information about your activities on this and other Web sites to provide you targeted advertising based upon your interests.  If you wish to not have this information used for the purpose of serving you targeted ads, you may opt-out by clicking here. Please note this does not opt you out of being served advertising. You will continue to receive generic ads.</p>
+        <h3>Advertising</h3> 
+        <p>We partner with a third party ad network to either display advertising on our Web site or to manage our advertising on other sites.  Our ad network partner uses cookies and Web beacons to collect non-personally identifiable information about your activities on this and other Web sites to provide you targeted advertising based upon your interests.  If you wish to not have this information used for the purpose of serving you targeted ads, you may opt-out by <a href="http://www.google.com/ads/preferences/html/opt-out.html" target="_blank">clicking here</a>. Please note this does not opt you out of being served advertising. You will continue to receive generic ads.</p>
         <br>
 
         <h3>Testimonials</h3>
@@ -323,16 +354,14 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                 <a href="http://www.aweber.com/videos.htm" id="videos">Videos</a>
         </div>
     </div>
-
     <div class="box">
         <h2>Email Marketing Tips</h2>
         <span id="footer-blog">
-            <a href="http://www.aweber.com/blog/email-marketing/email-membership-site.htm">How To Create Newsletters For Your Membership Site</a><br><small>6/26/13 </small><br><br> 
-<a href="http://www.aweber.com/blog/email-marketing/manage-multiple-audiences-easily.htm">How This Online Business Manages Multiple Audiences Easily</a><br><small>6/24/13 </small><br><br> 
-<a href="http://www.aweber.com/blog/email-marketing/4th-july-free-email-template.htm">Happy Birthday 'Merica - Email Template Giveaway</a><br><small>6/20/13 </small><br><br> 
+            <a href="http://www.aweber.com/blog/uncategorized/christmas-2013-support-hours.htm">Christmas 2013 Support Hours</a><br><small>12/23/13 </small><br><br> 
+<a href="http://www.aweber.com/blog/email-marketing/email-newsletter-newbies-keep-calm-aweber-support-is-strong.htm">Email Newsletter Newbies: Keep Calm, AWeber Support Is Strong</a><br><small>12/19/13 </small><br><br> 
+<a href="http://www.aweber.com/blog/email-marketing/customer-service-success.htm">The Customer Service Connection With Success</a><br><small>12/17/13 </small><br><br> 
         </span>
     </div>
-
     <div class="box">
         <h2>Developers</h2>
         <div id="footer-dev">
@@ -343,74 +372,50 @@ if(typeof(_vis_opt_settings_loaded) == "boolean" && typeof(_vis_opt_top_initiali
                 <a href="http://www.aweber.com/careers.htm">We're Hiring!</a>
         </div>
     </div>
+</div>
 
+<div class="footer-logos">
+	<ul class="awards">
+	      <li class="aw-01" style="width:150px; height:50px;"></li>
+		  <li class="aw-02" style="width:150px; height:33px;"></li>
+	      <li class="aw-03" style="width:150px; height:33px;"></li>
+	      <li class="aw-04" style="width:150px; height:70px;"></li>
+	      <li class="aw-05" style="width:95px; height:80px;"></li>
+	      <li class="aw-06" style="width:95px; height:80px;"></li>
+    </ul>
 </div>
 
 <div id="sub-footer">
+	<a id="anniversary" href="http://aweber.com/press.htm"></a>
     <div id="address">
         <h3>AWeber Communications</h3>
-
             <p><a href="https://www.aweber.com/contact-us.htm" class="contact">1100 Manor Drive Chalfont, PA 18914, USA</a></p>
             <p><strong>Toll Free:</strong> <a href="https://www.aweber.com/contact-us.htm" class="contact">+1 877-293-2371</a></p>
-
-        <p id="copy">Copyright © 1998-2013. Reproduction Strictly Prohibited.</p>
-        <p>All Rights Reserved. <a href="http://www.aweber.com/privacy.htm" class="legal">Privacy</a> | <a href="http://www.aweber.com/antispam.htm" class="legal">Anti-Spam</a>
-
+	        <p id="copy">Copyright © 1998-2013. Reproduction Strictly Prohibited.</p>
+	        <p>All Rights Reserved. <a href="http://www.aweber.com/privacy.htm" class="legal">Privacy</a> | <a href="http://www.aweber.com/antispam.htm" class="legal">Anti-Spam</a> | <a href="http://www.aweber.com/sitemap.htm" class="legal">Sitemap</a>
     </p></div>
-
     <div id="search">
         <form action="/search.htm" method="get">
             <input class="search-box" type="text" name="q" id="s" onfocus="javascript:if(this.value=='Search AWeber...') {this.value='';}" onblur="javascript:if(this.value=='') {this.value='Search AWeber...'}" value="Search AWeber...">
             <input id="search-button" type="submit" name="submit" alt="Go" value="Go">
         </form>
     </div>
-
     <div id="social">
         <a href="http://www.facebook.com/aweber" id="fb"></a>
         <a href="http://twitter.com/aweber" id="twitter"></a>
         <a href="http://www.aweber.com/blog/feed/" id="rss"></a>
         <a href="http://www.aweber.com/blog/subscribe-to-blog/" id="email"></a>
     </div>
-
-
 </div>
 
-<!-- Google Code for Main Remarketing Tag -->
-<!-- Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. For instructions on adding this tag and more information on the above requirements, read the setup guide: google.com/ads/remarketingsetup -->
-<script type="text/javascript">
-/* <![CDATA[ */
-var google_conversion_id = 1071267547;
-var google_conversion_label = "ZCXGCPv1qgMQ2_3o_gM";
-var google_custom_params = window.google_tag_params;
-var google_remarketing_only = true;
-/* ]]> */
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js">
-</script>
-<noscript>
-<div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1071267547/?value=0&amp;label=ZCXGCPv1qgMQ2_3o_gM&amp;guid=ON&amp;script=0"/>
-</div>
-</noscript>
 
-<!-- Google Code for Main Remarketing Tag -->
-<script type="text/javascript">
-    <!--
-    var google_conversion_id = 1071267547;
-    var google_conversion_label = "ZCXGCPv1qgMQ2_3o_gM";
-    var google_custom_params = window.google_tag_params;
-    var google_remarketing_only = true;
-    -->
-</script>
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js"></script>
-<noscript><div style="display:inline;"><img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/1071267547/?value=0&amp;label=ZCXGCPv1qgMQ2_3o_gM&amp;guid=ON&amp;script=0"/></div></noscript>
 <!-- AWeber Analytics -->
 <script type="text/javascript">
 loadScript((("https:" == document.location.protocol) ? "https://" : "http://") + "analytics.aweber.com/js/awt_analytics.js?id=1w", null);
 </script>
 <!-- AdRoll Retargeting Code -->
 <script type="text/javascript">
-    <!--
+  <!--
     adroll_adv_id = "YMNSSOAYLFDVVDD3FKLTAD";
     adroll_pix_id = "7XUWLEKTBNG5LBO3V6DCM6";
     (function () {
@@ -426,8 +431,8 @@ loadScript((("https:" == document.location.protocol) ? "https://" : "http://") +
         document.getElementsByTagName('script')[0].parentNode).appendChild(scr);
        if(oldonload){oldonload()}};
     }());
-    -->
-</script><script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"rpm-images.newrelic.com/42/eum/rum.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","488dabdc4c","2158810","MwNbZUBUDRJSAkwIDApJeFJGXAwPHBFNA0wUFFBHU1Ya",0,55,new Date().getTime(),"","","","",""]);</script>
+   --> 
+</script><script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-3.newrelic.com","488dabdc4c","2158810","MwNbZUBUDRJSAkwIDApJeFJGXAwPHBFNA0wUFFBHU1Ya",0,61,new Date().getTime(),"","","","",""]);</script>
 
 
-<script type="text/javascript" src="https://rpm-images.newrelic.com/42/eum/rum.js"></script></body></html>
+<script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
