--- a/a/ad/add/addintools.com.html
+++ b/a/ad/add/addintools.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the addintools.com privacy policy that was archived on 2013-06-24.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130624142123id_/http%3A//www.addintools.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the addintools.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228035856id_/http%3A//www.addintools.com/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- #BeginTemplate "Templates/template-english.dwt" --><!-- DW6 --><head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
@@ -439,7 +439,7 @@
     <div id="midbottom">
       <div id="innerbottom">
 				
-        <p>2001-2012 Addintools. All rights reserved. &nbsp;<a href="privacy.htm" target="_blank">Privacy Policy</a>&nbsp;&nbsp;|&nbsp; <a href="contact.htm" target="_blank">Contact Us</a><br>
+        <p>2001-<script type="text/JavaScript">document.write((new Date()).getFullYear());</script>2020 Addintools. All rights reserved. &nbsp;<a href="privacy.htm" target="_blank">Privacy Policy</a>&nbsp;&nbsp;|&nbsp; <a href="contact.htm" target="_blank">Contact Us</a><br>
 If you have any questions or suggestions about our products or web site, please feel free to <a href="office2010/support.html" target="_blank">submit them to us</a>. Thank you very much.<br>
         </p>
 			</div>
