--- a/p/pl/plu/plugrush.com.html
+++ b/p/pl/plu/plugrush.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the plugrush.com privacy policy that was archived on 2013-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130622025920id_/http%3A//www.plugrush.com/privacy_policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the plugrush.com privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228045416id_/https%3A//www.plugrush.com/privacy_policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-        <title>PlugRush</title>
+        <title>Pages</title>
         <meta name="description" content="">
         <meta name="keywords" content="">
         <meta name="btg" content="atl2c72orekuw7g8vkq3lp9976fkdbokael5bncaypg0b7jpy">
@@ -13,7 +13,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/scriptaculous/1.8.3/scriptaculous.js"></script>
         <script src="//twiant.com/js/v3.js" type="text/javascript"></script>
-        <script type="text/javascript">
+                <script type="text/javascript">
 						var isset = '';
 			var hover = isset;
 			var menus = new Array('adv','pub','aff');
@@ -58,7 +58,7 @@
 	var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 	})();
 </script>    </head>
-    <body id="body"><div id="olark" style="display: none;"><olark><iframe frameborder="0" id="olark-loader"></iframe></olark></div>
+    <body id="body">
         <div id="wrap">
             <div id="head" onmouseout="menuOut();">
                 <div class="inner">
@@ -66,8 +66,8 @@
                     <img alt="" border="0" class="loaderHead" height="11" id="loading" src="//twiant.com/img/loader_head.gif" style="display:none;" width="16">
                     <div id="menu1">
                         <ul class="fr">
-						                        	<li><a href="https://www.plugrush.com/account/register" id="register" title="Register">Register</a></li>
-                        	<li><a href="https://www.plugrush.com/account/login" id="login" title="Login">Login</a></li>
+						                        	<li><a href="/account/register" id="register" title="Register">Register</a></li>
+                        	<li><a href="/account/login" id="login" title="Login">Login</a></li>
 						                        </ul>
                     </div>
                 </div>
@@ -283,11 +283,7 @@
             </div>
         </div>
 		<div class="popupWrap" id="popup"><div id="popUpdate"><img alt="" height="11" src="//twiant.com/img/ajax-loader2.gif" style="height:11px;margin:50px 292px;width:16px;" width="16"></div></div>
-                <!-- begin olark code --><script data-cfasync="false" type="text/javascript">/*{literal}<![CDATA[*/
-        window.olark||(function(c){var f=window,d=document,l=f.location.protocol=="https:"?"https:":"http:",z=c.name,r="load";var nt=function(){f[z]=function(){(a.s=a.s||[]).push(arguments)};var a=f[z]._={},q=c.methods.length;while(q--){(function(n){f[z][n]=function(){f[z]("call",n,arguments)}})(c.methods[q])}a.l=c.loader;a.i=nt;a.p={0:+new Date};a.P=function(u){a.p[u]=new Date-a.p[0]};function s(){a.P(r);f[z](r)}f.addEventListener?f.addEventListener(r,s,false):f.attachEvent("on"+r,s);var ld=function(){function p(hd){hd="head";return["<",hd,"></",hd,"><",i,' onl' + 'oad="var d=',g,";d.getElementsByTagName('head')[0].",j,"(d.",h,"('script')).",k,"='",l,"//",a.l,"'",'"',"></",i,">"].join("")}var i="body",m=d[i];if(!m){return setTimeout(ld,100)}a.P(1);var j="appendChild",h="createElement",k="src",n=d[h]("div"),v=n[j](d[h](z)),b=d[h]("iframe"),g="document",e="domain",o;n.style.display="none";m.insertBefore(n,m.firstChild).id=z;b.frameBorder="0";b.id=z+"-loader";if(/MSIE[ ]+6/.test(navigator.userAgent)){b.src="javascript:false"}b.allowTransparency="true";v[j](b);try{b.contentWindow[g].open()}catch(w){c[e]=d[e];o="javascript:var d="+g+".open();d.domain='"+d.domain+"';";b[k]=o+"void(0);"}try{var t=b.contentWindow[g];t.write(p());t.close()}catch(x){b[k]=o+'d.write("'+p().replace(/"/g,String.fromCharCode(92)+'"')+'");d.close();'}a.P(2)};ld()};nt()})({loader: "static.olark.com/jsclient/loader0.js",name:"olark",methods:["configure","extend","declare","identify"]});
-        /* custom configuration goes here (www.olark.com/documentation) */
-        olark.identify('7109-137-10-2994');/*]]>{/literal}*/</script><noscript><a href="https://www.olark.com/site/7109-137-10-2994/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript><!-- end olark code -->
-		        <!-- Google Code for Remarketing tag -->
+        <!-- Google Code for Remarketing tag -->
         <script type="text/javascript">
         /* <![CDATA[ */
         var google_conversion_id = 993087391;
