--- a/u/uc/ucr/ucr.edu.html
+++ b/u/uc/ucr/ucr.edu.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ucr.edu privacy policy that was archived on 2013-06-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20130630225711id_/http%3A//www.ucr.edu/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ucr.edu privacy policy that was archived on 2013-12-28.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131228061301id_/http%3A//www.ucr.edu/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
 <title>UC Riverside: Privacy Policy</title>
@@ -7,7 +7,7 @@
 <!--[if IE]><![endif]-->
 <meta http-equiv="last-modified" content="2011-05-09">
 <meta name="version" content="2.64 2.138 ">
-<!-- 06/30/13 15:08:24 06/30/13 15:57:11 -->
+<!-- 12/27/13 21:29:26 12/27/13 22:13:01 -->
 <!--link rel="stylesheet" type="text/css" href="/css/design6bis.css" media="all" />
 <link rel="stylesheet" type="text/css" href="/css/narrow6.css" media="all" />
 <link rel="stylesheet" type="text/css" href="/css/blue6a.css" media="all" />
@@ -60,7 +60,7 @@
     </ul>
     <hr>
 </div>
-<div id="masthead_home" style="background-image:url(/images/design6/mastheads/masthead04.jpg);">
+<div id="masthead_home" style="background-image:url(/images/design6/mastheads/masthead02.jpg);">
 	<h1><a href="http://www.ucr.edu/"><span class="printonly">UC Riverside</span></a></h1>
 	<div class="pagewrapper">
 		
@@ -87,7 +87,7 @@
 </div>
 <div id="nav_audience">
 	<h2 class="accessibility">Audience Navigation</h2>
-	<ul><li><a id="nav_audience_future" href="/future/" title="For Prospective Students"><span>Prospective Students</span></a></li><li><a id="nav_audience_students" href="/students/" title="For Current Students"><span>Current Students</span></a></li><li><a id="nav_audience_parents" href="/parents/" title="For Parents"><span>Parents</span></a></li><li><a id="nav_audience_faculty" href="/faculty/" title="For Faculty"><span>Faculty</span></a></li><li><a id="nav_audience_staff" href="/staff/" title="For Staff"><span>Staff</span></a></li><li><a id="nav_audience_alumni" href="/alumni/" title="For Alumni"><span>Alumni</span></a></li><li><a id="nav_audience_friends" href="/friends/" title="For Friends"><span>Friends</span></a></li><li><a id="nav_audience_media" href="/media/" title="For Media"><span>Media</span></a></li></ul>
+	<ul><li><a id="nav_audience_future" href="/future/" title="For Prospective Students"><span>Prospective Students</span></a></li><li><a id="nav_audience_students" href="/students/" title="For Current Students"><span>Current Students</span></a></li><li><a id="nav_audience_parents" href="/parents/" title="For Parents"><span>Parents</span></a></li><li><a id="nav_audience_faculty" href="/faculty/" title="For Faculty"><span>Faculty</span></a></li><li><a id="nav_audience_staff" href="/staff/" title="For Staff"><span>Staff</span></a></li><li><a id="nav_audience_alumni" href="/alumni/" title="For Alumni"><span>Alumni</span></a></li><li><a id="nav_audience_friends" href="/friends/" title="For Friends"><span>Friends</span></a></li><li><a id="nav_audience_industry" href="/industry/" title="For Industry"><span>Industry</span></a></li><li><a id="nav_audience_media" href="/media/" title="For Media"><span>Media</span></a></li></ul>
 </div>
 
 <!-- Status: Normal -->
@@ -226,7 +226,7 @@ The main campus site (i.e. www.ucr.edu) in addition to general logs, also collec
 					<li><a href="http://admissions.ucr.edu/VisitUCR" onclick="javascript:_gaq.push(['_trackEvent','Footer','Link','http://admissions.ucr.edu/VisitUCR']);">Visit UCR</a></li>
 				</ul>
 
-<!-- Generated in 0.161699 seconds using 768 KiB of memory. -->
+<!-- Generated in 0.142081 seconds using 768 KiB of memory. -->
 
 			</div>
 			<div class="column49">
@@ -273,7 +273,7 @@ The main campus site (i.e. www.ucr.edu) in addition to general logs, also collec
 </div>
 
 
-<!-- Generated in 0.023991 seconds using 768 KiB of memory. -->
+<!-- Generated in 0.022707 seconds using 768 KiB of memory. -->
 
 
 </body></html>
